--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Our Menu</title>
+<link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+<div class="container">
+  <h1>Our Menu</h1>
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <div class="menu-item">
+        <div class="menu-title">Chicken</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <div class="menu-item">
+        <div class="menu-title">Beef</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <div class="menu-item">
+        <div class="menu-title">Sushi</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
