--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -13,19 +13,28 @@
     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="menu-item">
         <div class="menu-title">Chicken</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
+             Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
+             Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
+            Etiam vulputate at ante id cursus.</p>
       </div>
     </div>
     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="menu-item">
         <div class="menu-title">Beef</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
+                    Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
+                    Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
+                    Etiam vulputate at ante id cursus</p>
       </div>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
       <div class="menu-item">
         <div class="menu-title">Sushi</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
+                    Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
+                    Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
+                    Etiam vulputate at ante id cursu.</p>
       </div>
     </div>
   </div>
