--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Our Menu</title>
-<link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Menu</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div class="container">
-  <h1>Our Menu</h1>
-  <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-12">
-      <div class="menu-item">
-        <div class="menu-title">Chicken</div>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
-             Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
-             Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
-            Etiam vulputate at ante id cursus.</p>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6 col-sm-12">
-      <div class="menu-item">
-        <div class="menu-title">Beef</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
+  <header class="container">
+    <h1>Our Menu</h1>
+  </header>
+  
+  <main class="container">
+    <section class="menu-item col-lg-4 col-md-6 col-sm-12">
+      <header class="menu-title">
+        <h2>Chicken</h2>
+      </header>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
                     Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
                     Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
-                    Etiam vulputate at ante id cursus</p>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-12 col-sm-12">
-      <div class="menu-item">
-        <div class="menu-title">Sushi</div>
-        <p>   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
+                    Etiam vulputate at ante id cursus </p>
+    </section>
+
+    <section class="menu-item col-lg-4 col-md-6 col-sm-12">
+      <header class="menu-title">
+        <h2>Beef</h2>
+      </header>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
                     Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
                     Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
-                    Etiam vulputate at ante id cursu.</p>
-      </div>
-    </div>
-  </div>
-</div>
+                    Etiam vulputate at ante id cursus </p>
+    </section>
+
+    <section class="menu-item col-lg-4 col-md-12 col-sm-12">
+      <header class="menu-title">
+        <h2>Sushi</h2>
+      </header>
+      <p>   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ante sed tortor gravida pulvinar.
+                    Ut ultricies nunc ac felis pulvinar fringilla ut nec metus. Cras vitae viverra erat, at accumsan enim.
+                    Mauris sit amet laoreet erat, quis porta tortor. Etiam at nunc sit amet ex eleifend auctor. Proin non justo urna.
+                    Etiam vulputate at ante id cursus </p>
+    </section>
+  </main>
+  
 </body>
 </html>
