--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>module2-solution</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
 <body>
     <h1>Our Menu</h1>
-    
-   <section class="column-lg-4 colmn-md-6 colmn-sm-12">
+    <section class="column-lg-4 colmn-md-6 colmn-sm-12">
+        <div>
+            <p class="sub1">Chicken</p>
+            <p class="content">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+            </p>
+        </div>
+    </section>
+    <section class="column-lg-4 colmn-md-6 colmn-sm-12">
         <div>
             <p class="sub2">Beef</p>
             <p class="content">
