--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>module2-solution</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-
 <body>
     <h1>Our Menu</h1>
-    <section class="column-lg-4 colmn-md-6 colmn-sm-12">
-        <div>
-            <p class="sub1">Chicken</p>
-            <p class="content">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-            </p>
-        </div>
-    </section>
-    <section class="column-lg-4 colmn-md-6 colmn-sm-12">
-        <div>
-            <p class="sub2">Beef</p>
-            <p class="content">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-        </div>
-    </section>
-    <section class="column-lg-4 colmn-md-12 colmn-sm-12">
-        <div>
-            <p class="sub3">Sushi</p>
-            <p class="content">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-            </p>
-        </div>
+    <div class="row">
+        <section class="menu-section column-lg-4 column-md-6 column-sm-12">
+            <div class="menu-item">
+                <p class="title-box sub1">Chicken</p>
+                <p class="content">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                </p>
+            </div>
+        </section>
+        <section class="menu-section column-lg-4 column-md-6 column-sm-12">
+            <div class="menu-item">
+                <p class="title-box sub2">Beef</p>
+                <p class="content">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                </p>
+            </div>
+        </section>
+        <section class="menu-section column-lg-4 column-md-12 column-sm-12">
+            <div class="menu-item">
+                <p class="title-box sub3">Sushi</p>
+                <p class="content">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                </p>
+            </div>
+        </section>
+    </div>
 </body>
-
 </html>
