--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -12,7 +12,7 @@
             <div class="menu-item">
                 <p class="title-box sub1">Chicken</p>
                 <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                 </p>
             </div>
         </section>
@@ -20,7 +20,7 @@
             <div class="menu-item">
                 <p class="title-box sub2">Beef</p>
                 <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                 </p>
             </div>
         </section>
@@ -28,7 +28,7 @@
             <div class="menu-item">
                 <p class="title-box sub3">Sushi</p>
                 <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                 </p>
             </div>
         </section>
