--- a/mod2_solution/module2-solution/index.html
+++ b/mod2_solution/module2-solution/index.html
@@ -12,7 +12,7 @@
             <div class="menu-item">
                 <p class="title-box sub1">Chicken</p>
                 <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
             </div>
         </section>
@@ -20,7 +20,7 @@
             <div class="menu-item">
                 <p class="title-box sub2">Beef</p>
                 <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
             </div>
         </section>
@@ -28,7 +28,7 @@
             <div class="menu-item">
                 <p class="title-box sub3">Sushi</p>
                 <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
             </div>
         </section>
