--- a/mod3_solution/module3-solution/index.html
+++ b/mod3_solution/module3-solution/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -24,34 +22,32 @@
     <div class="collapse navbar-collapse" id="myNavbar">
     
       <ul class="nav navbar-nav navbar-right" >
-        <li style>
-        <a href="#" > 
-        <span class="glyphicon glyphicon-cutlery"></span> chicken</a>
+        <li>
+          <a href="#" > 
+            <span class="glyphicon glyphicon-cutlery"></span> chicken
+          </a>
         </li>
         <li>
-        <a href="#" >
-        <span class="glyphicon glyphicon-info-sign"></span> beef</a>
+          <a href="#" >
+            <span class="glyphicon glyphicon-info-sign"></span> beef
+          </a>
         </li>
         <li>
-        <a href="#">
-        <span class="glyphicon glyphicon-certificate"></span> sushi</a>
+          <a href="#">
+            <span class="glyphicon glyphicon-certificate"></span> sushi
+          </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<br>
-<br>  
-<h1><p class="text-center">Our Menu</p></h1>
 
-
-<div id="main-content" class="container">
-  <div id="home-tiles" class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12">
-            
-            <p id="chickstory">
-          <h2>Chicken</h2>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque condimentum porttitor sem et sodales. Integer non nibh quis magna varius consectetur ac eu turpis. Aenean vehicula orci velit, non maximus est aliquam eu. Pellentesque quis maximus nisi. Duis vel tincidunt urna. Sed velit nibh, luctus sed
+<div class="container">
+  <h1 class="text-center">Our Menu</h1>
+  <div id="chickstory">
+    <h2 class="text-center">Chicken</h2>
+    <p>
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque condimentum porttitor sem et sodales. Integer non nibh quis magna varius consectetur ac eu turpis. Aenean vehicula orci velit, non maximus est aliquam eu. Pellentesque quis maximus nisi. Duis vel tincidunt urna. Sed velit nibh, luctus sed
                 dolor ac, lobortis ornare nulla. Suspendisse non condimentum mauris.
 
                 Donec convallis gravida ante vitae fermentum. Etiam id finibus purus. Sed ornare ultrices ex eget varius. Integer hendrerit imperdiet justo, nec molestie orci tincidunt vitae. Praesent eu massa fermentum, commodo arcu id, ornare lorem. Morbi a lacus nec nisl porta mollis vel nec velit. Proin malesuada
@@ -70,20 +66,12 @@
                 Donec convallis gravida ante vitae fermentum. Etiam id finibus purus. Sed ornare ultrices ex eget varius. Integer hendrerit imperdiet justo, nec molestie orci tincidunt vitae. Praesent eu massa fermentum, commodo arcu id, ornare lorem. Morbi a lacus nec nisl porta mollis vel nec velit. Proin malesuada
                 justo id massa finibus sodales. Curabitur elit tortor, tristique ut augue eu, lobortis rhoncus leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec urna eros. In
                 vitae venenatis erat. Aenean a elit vitae tellus mattis consectetur. In hac habitasse platea dictumst. Aenean quis blandit ipsum, vel semper metus.
-
-                Nunc tristique finibus placerat. Curabitur quis enim vel diam mollis sollicitudin. Morbi tincidunt risus sit amet dui feugiat aliquet. Nulla tortor ex, fringilla ut suscipit at, ultricies vel dolor. Sed euismod congue neque, at aliquet enim accumsan ac. Fusce et dapibus mauris, id suscipit ipsum.
-                Phasellus at orci a purus suscipit lacinia vel vitae ipsum. Maecenas at imperdiet elit. Nunc vulputate dolor sed scelerisque blandit.
-
-                Vivamus nec suscipit velit, vestibulum iaculis metus. Sed sollicitudin lacus neque, et auctor erat vulputate at. Duis fermentum ex sit amet magna dapibus, vitae fringilla lorem tempus. Curabitur quis scelerisque justo, sed tincidunt ex. Vivamus eu justo at nulla pulvinar lobortis. Mauris imperdiet porta
-                pulvinar. Nullam blandit justo in metus gravida, eu porttitor eros viverra. Nulla faucibus odio eget nisl suscipit aliquet. Nulla eget ullamcorper libero, aliquam vulputate sem. Aenean eu mattis lorem, in molestie ipsum.
-
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque condimentum porttitor sem et sodales. Integer non nibh quis magna varius consectetur ac eu turpis. Aenean vehicula orci velit, non maximus est aliquam eu. Pellentesque quis maximus nisi. Duis vel tincidunt urna. Sed velit nibh, luctus sed
-                dolor ac, lobortis ornare nulla. Suspendisse non condimentum mauris.
-
-            </p>
-      </div>
-    </div>
+    </p>
+  </div>
 </div>
+
+</body>
+</html>
 
 </body>
 </html>
